Alignment issues resolved on register (merged)
Alignment issues resolved on register (merged)

--- a/public/web_assets/css/style.css
+++ b/public/web_assets/css/style.css
@@ -1764,4 +1764,7 @@ header .btn.transparent,
     .page-wrapper{
         padding-top: 40px;
     }
+    .margin-mobile-left{
+        margin-left: -5px;
+    }
 }
